src/styles/components/WorkExampleTile.less
.WorkExampleTile {
    display: inline-block;
    
    box-sizing: content-box;
    width: 250px;
    height: 250px;
    margin: 10px;
    padding: 10px;

    border: 1px solid;
    border-radius: 5px;
    box-shadow: 0 0 10px;
    overflow: hidden;
    cursor: pointer;
    
    > * {
        width: 100%;
    }

    .title {
        display: inline-block;
        font-weight: bold;
        margin-bottom: 10px;
        text-align: center;
    }
}

